# BlackboxJailbreakLab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_SUMMARY.md  configs.py  main.py  pyproject.toml  requirements.txt  schema.py  service.py  utils.py
attacker/: art_prompt.py  attack_service.py  base.py  deep_inception.py  gpt4_cipher.py  ica.py  jialbreak.py  overload.py  pair.py  past_tense.py  prompt_injection.py  random_search.py  rewrite.py  role_play.py  tap.py
attacker/gptfuzzer_attack/: __init__.py  gptfuzz.py
attacker/gptfuzzer_attack/fuzzer/: core.py  mutator.py  selection.py
attacker/rene_llm/: renellm.py
judge/: base.py  heuristic.py  llm.py  rule.py
model/: __init__.py  base.py  custom_api.py  interface.py  ollama_api.py  openai_api.py  silicon_flow_api.py
test/: eval_content.py  get_answer_from_silicon_flow_llms.py  request_service.py  request_silicon_flow_llm.py
