[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blackbox-jailbreak-lab"
version = "0.1.0"
description = "Black-box LLM jailbreak testing framework with multiple attack strategies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
jailbreak-lab = "main:attack"

[tool.setuptools.packages.find]
where = ["."]
include = ["attacker*", "model*", "judge*"]
